<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRelativeLayout">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorTitle"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/titleTV"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/superior_logo" />

    <RelativeLayout
        android:id="@+id/InnerRLOne"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/logoIV"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/chairmanMessageTV"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/colorBoxOne"
            android:gravity="center"
            android:text="@string/chairmanMessage"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lifeAtSuperiorTV"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@id/chairmanMessageTV"
            android:background="@color/colorBoxOne"
            android:gravity="center"
            android:text="@string/lifeAtSuperior"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/InnerRLTwo"
        android:layout_below="@id/InnerRLOne"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/admissionTV"
            android:text="@string/admission"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBoxTwo"
            />

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/chatTV"
            android:layout_toRightOf="@id/admissionTV"
            android:background="@color/colorBoxTwo"
            android:text="@string/chat"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developedBy"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:textStyle="italic"
        />


</RelativeLayout>